kubernetes/challenges/honksay.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: honksay
  namespace: challenges
  annotations:
    cloud.google.com/backend-config: '{"default": "honksay-healthcheck"}'
spec:
  selector:
    app: honksay
  ports:
    - name: http
      port: 80
      targetPort: 9988
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: honksay
  labels:
    app: honksay
  namespace: challenges
spec:
  selector:
    matchLabels:
      app: honksay
  replicas: 2
  template:
    metadata:
      labels:
        app: honksay
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node_pool
                    operator: In
                    values:
                      - maplectf-node-pool
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: honksay
          image: gcr.io/maplectf-2022/honksay:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9988
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honksay
  namespace: challenges
spec:
  rules:
    - host: honksay.ctf.maplebacon.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: honksay
                port:
                  number: 80
